[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://addons/carmel4a97.RTS_Camera2D/RTS-Camera2D.gd" type="Script" id=2]
[ext_resource path="res://addons/carmel4a97.RTS_Camera2D/node_icon.png" type="Texture" id=3]
[ext_resource path="res://scripts/pcg.gd" type="Script" id=4]
[ext_resource path="res://scripts/hexgrid.gd" type="Script" id=5]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="MousePos" type="Label" parent="UI"]
margin_bottom = 14.0

[node name="RTS-Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 150 )
current = true
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
camera_speed = 400

[node name="HexLandscapeGenerator" type="Node2D" parent="."]
z_index = 5
script = ExtResource( 4 )
islands = 10
island_max_walk = 50
island_fitness_edge_weight = 0.7
island_fitness_distance_weight = 1.9
coastline_max_thickness = 3
coastline_max_walk = 13
beach_max_walk = 11
beach_sand_anyway_prob = 0.15
beach_dig_prob = 0.075

[node name="HexGrid" type="Node2D" parent="."]
script = ExtResource( 5 )
map_w = 45
map_h = 45
sprite_scale = Vector2( 2, 2 )
[connection signal="ready" from="HexGrid" to="HexLandscapeGenerator" method="_on_HexGrid_ready"]
